@@ -119,15 +119,19 @@ function log_filter_admin_form_submit($form, &$form_state) {
 }
 
 /**
- * Expects (requires) POST vars: action, arg.
+ * Expects (requires) POST vars: require_admin (action:create).
  *
- * @param mixed $whatever
- *  - x
+ * @param string $action
+ * @param string $name
  * @return void
  *  - sends 403 header if the expected POST vars arent set or their sanitized values evaluates to empty
  */
-function log_filter_ajax_callback($whatever) {
-  if (TRUE === FALSE
+function log_filter_ajax_callback($action, $name) {
+  if (!user_is_logged_in()
+      || !$action || !($le = strlen($action)) || $le > 32
+      || !$name || !($le = strlen($name = $_POST['name'])) || $le > 32
+      || !($action === 'create')
+      || ($action == 'create' && !array_key_exists('require_admin', $_POST))
   ) {
     header('HTTP/1.1 403 Forbidden');
     exit;
@@ -135,8 +139,31 @@ function log_filter_ajax_callback($whatever) {
   $response = new stdClass();
   $response->action = $action;
   $response->success = TRUE;
+  $response->error_code = 0;
   $response->error = '';
 
+  switch ($action) {
+    case 'create':
+      if (!preg_match('/^[a-zA-Z_][a-zA-Z\d_]+$/', $name)) {
+        $response->success = FALSE;
+        $response->error_code = 10;
+        $response->error = 'Not valid machine name[' . $name . '].';
+      }
+      $name = strtolower($name);
+      //
+      break;
+    default:
+      $response->success = FALSE;
+      $response->error_code = 1;
+      $response->error = 'Unsupported action[' . $action . '].';
+  }
+
+watchdog(
+                    'log_filter',
+                    'Won\'t create the filter \'!name\' because user !user doesn\'t have \'log_filter edit filters\' permission.',
+                    array('!name' => $filter_name, '!user' => $GLOBALS['user']->name),
+                    WATCHDOG_WARNING
+                );
 
   header('Content-Type: application/json; charset=utf-8');
   header('Cache-Control: private, no-store, no-cache, must-revalidate');
